# Game

./: .clang-format  .gitignore  CMakeLists.txt  CMakeOverrides.txt  LICENSE.md  README.md  cmake.sh
shaders/: CMakeLists.txt  simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  main.cpp
src/core/: GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.hpp  Logger.cpp  Logger.hpp  Types.hpp  UniqueVmaAllocator.cpp  UniqueVmaAllocator.hpp  Utils.cpp  Utils.hpp  VmaAllocatorUnique.cpp  VmaAllocatorUnique.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanGraphicsContext.cpp  VulkanGraphicsContext.hpp
src/game/: Game.cpp  Game.hpp
src/renderer/: DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.hpp  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.hpp  Image.cpp  Image.hpp  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.hpp  Renderer.cpp  Renderer.hpp  Types.cpp  Types.hpp  Utils.cpp  Utils.hpp  VulkanGraphicsContext.cpp  VulkanGraphicsContext.hpp
